--- a/css/main.css
+++ b/css/main.css
@@ -347,6 +347,9 @@ body {
   .subsription-form__icon {
     fill: var(--main-theme-color);
   }
+  .footer-address__contact_white {
+    color: #ffffff;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-wrapper {
