--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -205,6 +205,9 @@
   .subsription-form__icon {
     fill: var(--main-theme-color);
   }
+  .footer-address__contact_white {
+    color: #ffffff;
+  }
 }
 
 @media screen and(min-width:1200px) {
