--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -10,11 +10,6 @@
 
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: linear-gradient(
-        var(--hero-overlay-color),
-        var(--hero-overlay-color)
-      ),
-      url(/images/main/mobile/mob-hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -32,6 +27,17 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--main-theme-color);
+  }
+}
+
+// mob
+@media screen and (max-width: 767px) {
+  .hero__wrapper {
+    background-image: linear-gradient(
+        var(--hero-overlay-color),
+        var(--hero-overlay-color)
+      ),
+      url(/images/main/mobile/mob-hero.jpg);
   }
 }
 
