--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -47,6 +47,8 @@
     padding-top: 10px;
     padding-bottom: 10px;
     max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .callback-form__button {
