--- a/css/main.css
+++ b/css/main.css
@@ -138,9 +138,10 @@ body {
   padding-right: 15px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .container {
-    width: 480px;
+    min-width: 320px;
+    max-width: 480px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -148,6 +149,8 @@ body {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -228,12 +231,9 @@ body {
     margin-bottom: 20px;
     color: var(--main-theme-color);
   }
-  .subsription-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  .footer-subscription {
     width: 100%;
+    text-align: center;
   }
   .subsription-form__input {
     margin-bottom: 20px;
@@ -241,7 +241,7 @@ body {
     padding-bottom: 15px;
     padding-left: 16px;
     padding-right: 16px;
-    width: 450px;
+    width: 100%;
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: 0.03em;
@@ -408,12 +408,17 @@ body {
   border: none;
   background-color: transparent;
   padding: 0;
+  transition: color var(--animation-duration) var(--animation-timing-function);
+  fill: currentColor;
+}
+.menu-button:hover, .menu-button:focus {
+  color: var(--accent-color);
 }
 
 .menu-button__svg {
   width: 40px;
   height: 40px;
-  color: var(--main-text-color);
+  fill: currentColor;
 }
 
 .menu-button__icon {
@@ -443,13 +448,14 @@ body {
     top: 0;
     left: 0;
     z-index: 99;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #ffffff;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
     transition: opacity var(--animation-duration) var(--animation-timing-function);
+    overflow: auto;
   }
   .mobile-menu.is-open {
     opacity: 1;
@@ -495,9 +501,11 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     color: #212121;
+    transition: color var(--animation-duration) var(--animation-timing-function);
+    fill: currentColor;
   }
   .mobile-menu__link:hover, .mobile-menu__link:focus {
-    color: #2196f3;
+    color: var(--accent-color);
   }
   .mobile-menu__contact-list {
     display: flex;
@@ -507,15 +515,14 @@ body {
   }
   .mobile-menu__contact-link {
     font-weight: 500;
-    font-size: 34px;
-    line-height: 40px;
+    font-size: 24px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
-  }
-  .mobile-menu__contact-link_blue {
-    color: #2196f3;
-  }
-  .mobile-menu__contact-link_grey {
     color: #757575;
+  }
+  .mobile-menu__contact-link:hover,
+.mobile-menu__contact-link.focus {
+    color: var(--accent-color);
   }
   .mobile-menu__social-list {
     display: flex;
@@ -721,6 +728,8 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
     max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .callback-form__button {
     max-width: 200px;
@@ -1240,12 +1249,17 @@ body {
     padding-bottom: 40px;
     padding-left: 40px;
     padding-right: 40px;
-    width: 450px;
+    width: 100%;
     min-height: 609px;
     background: var(--main-theme-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform var(--animation-duration) var(--animation-timing-function);
+  }
+}
+@media screen and (min-width: 450px) {
+  .modal {
+    width: 450px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1354,9 +1368,9 @@ body {
   }
   .hero__wrapper {
     margin: 0 auto;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-size: cover;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-size: 480px;
     background-repeat: no-repeat;
     background-position: center;
     max-width: 480px;
@@ -1375,32 +1389,32 @@ body {
 }
 @media screen and (max-width: 767px) {
   .hero__wrapper {
-    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url(/images/main/mobile/mob-hero.jpg);
+    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url(../images/main/mobile/mob-hero.jpg);
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero__wrapper {
-    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url("/images/main/mobile/mob-hero@2x.jpg");
+    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url("../images/main/mobile/mob-hero@2x.jpg");
   }
 }
 @media screen and (min-width: 768px) {
   .hero__wrapper {
-    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url("/images/main/tablet/tab-hero.jpg");
+    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url("../images/main/tablet/tab-hero.jpg");
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .hero__wrapper {
-    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url("/images/main/tablet/tab-hero@2x.jpg");
+    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url("../images/main/tablet/tab-hero@2x.jpg");
   }
 }
 @media screen and (min-width: 1200px) {
   .hero__wrapper {
-    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url(/images/main/desctop/desc-hero.jpg);
+    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url(../images/main/desctop/desc-hero.jpg);
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero__wrapper {
-    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url("/images/main/desctop/desc-hero@2x.jpg");
+    background-image: linear-gradient(var(--hero-overlay-color), var(--hero-overlay-color)), url("../images/main/desctop/desc-hero@2x.jpg");
   }
 }
 @media screen and (min-width: 768px) {
@@ -1422,13 +1436,20 @@ body {
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
-    width: 360px;
+    max-width: 360px;
     font-weight: 900;
     font-size: 26px;
     line-height: 1.6153;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--main-theme-color);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.363636;
   }
 }
 .features__icon {
@@ -1628,13 +1649,13 @@ body {
   .clients__list {
     display: flex;
     gap: 30px;
+    width: 100%;
     flex-wrap: wrap;
     justify-content: center;
   }
 }
-.clients__list {
-  display: flex;
-  gap: 30px;
+.clients__list-item {
+  flex-basis: calc((100% - 30px) / 2);
 }
 
 .clients__link {
@@ -1643,7 +1664,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 210px;
   height: 92px;
   color: var(--social-list-icon-fill);
   fill: currentColor;
@@ -1680,7 +1700,7 @@ body {
 }
 @media screen and (max-width: 767px) {
   .filter-list {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
@@ -1690,12 +1710,13 @@ body {
     padding-bottom: 6px;
     padding-left: 25px;
     padding-right: 25px;
-    min-width: 63px;
+    min-width: 73px;
     background-color: var(--filter-button-bg-color);
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
+    letter-spacing: 0.03em;
     cursor: pointer;
     border: 0;
     border-radius: 4px;
