--- a/scss/base/_container.scss
+++ b/scss/base/_container.scss
@@ -3,9 +3,10 @@
   padding-right: 15px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .container {
-    width: 480px;
+    min-width: 320px;
+    max-width: 480px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -14,6 +15,8 @@
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
