--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -23,8 +23,8 @@
     top: 0;
     left: 0;
     z-index: 99;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #ffffff;
 
     opacity: 0;
@@ -33,6 +33,7 @@
 
     transition: opacity var(--animation-duration)
       var(--animation-timing-function);
+    overflow: auto;
   }
 
   .mobile-menu.is-open {
@@ -88,10 +89,12 @@
     letter-spacing: 0.02em;
 
     color: #212121;
+    transition: color var(--animation-duration) var(--animation-timing-function);
+    fill: currentColor;
 
     &:hover,
     &:focus {
-      color: #2196f3;
+      color: var(--accent-color);
     }
   }
   .mobile-menu__contact-list {
@@ -103,16 +106,15 @@
   }
   .mobile-menu__contact-link {
     font-weight: 500;
-    font-size: 34px;
-    line-height: 40px;
+    font-size: 24px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
+    color: #757575;
   }
 
-  .mobile-menu__contact-link_blue {
-    color: #2196f3;
-  }
-  .mobile-menu__contact-link_grey {
-    color: #757575;
+  .mobile-menu__contact-link:hover,
+  .mobile-menu__contact-link.focus {
+    color: var(--accent-color);
   }
 
   .mobile-menu__social-list {
