--- a/scss/components/_modal-window.scss
+++ b/scss/components/_modal-window.scss
@@ -10,7 +10,7 @@
     padding-left: 40px;
     padding-right: 40px;
 
-    width: 450px;
+    width: 100%;
     min-height: 609px;
 
     background: var(--main-theme-color);
@@ -20,6 +20,12 @@
 
     transition: transform var(--animation-duration)
       var(--animation-timing-function);
+  }
+}
+
+@media screen and (min-width: 450px) {
+  .modal {
+    width: 450px;
   }
 }
 
