--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -8,9 +8,9 @@
   .hero__wrapper {
     margin: 0 auto;
 
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-size: cover;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-size: 480px;
     background-repeat: no-repeat;
     background-position: center;
     max-width: 480px;
@@ -37,7 +37,7 @@
         var(--hero-overlay-color),
         var(--hero-overlay-color)
       ),
-      url(/images/main/mobile/mob-hero.jpg);
+      url(../images/main/mobile/mob-hero.jpg);
   }
 }
 
@@ -50,7 +50,7 @@
         var(--hero-overlay-color),
         var(--hero-overlay-color)
       ),
-      url("/images/main/mobile/mob-hero@2x.jpg");
+      url("../images/main/mobile/mob-hero@2x.jpg");
   }
 }
 
@@ -61,7 +61,7 @@
         var(--hero-overlay-color),
         var(--hero-overlay-color)
       ),
-      url("/images/main/tablet/tab-hero.jpg");
+      url("../images/main/tablet/tab-hero.jpg");
   }
 }
 
@@ -74,7 +74,7 @@
         var(--hero-overlay-color),
         var(--hero-overlay-color)
       ),
-      url("/images/main/tablet/tab-hero@2x.jpg");
+      url("../images/main/tablet/tab-hero@2x.jpg");
   }
 }
 
@@ -85,7 +85,7 @@
         var(--hero-overlay-color),
         var(--hero-overlay-color)
       ),
-      url(/images/main/desctop/desc-hero.jpg);
+      url(../images/main/desctop/desc-hero.jpg);
   }
 }
 // desc 2x
@@ -97,7 +97,7 @@
         var(--hero-overlay-color),
         var(--hero-overlay-color)
       ),
-      url("/images/main/desctop/desc-hero@2x.jpg");
+      url("../images/main/desctop/desc-hero@2x.jpg");
   }
 }
 
@@ -124,12 +124,20 @@
     margin-left: auto;
     margin-right: auto;
 
-    width: 360px;
+    max-width: 360px;
     font-weight: 900;
     font-size: 26px;
     line-height: 1.6153;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--main-theme-color);
+  }
+}
+
+@media screen and(min-width:1200px) {
+  .hero__title {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.363636;
   }
 }
