--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -10,7 +10,7 @@
 
     padding-top: 118px;
     padding-bottom: 118px;
-    background-size: 480px;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     max-width: 480px;
