--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  overflow: scroll;
   opacity: 1;
   transition: opacity var(--animation-duration) var(--animation-timing-function), visibility var(--animation-duration) var(--animation-timing-function);
 }
@@ -272,17 +273,13 @@ body {
   .footer-wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   .footer__address-wrapper {
     display: flex;
     justify-content: space-around;
     margin-bottom: 60px;
-  }
-  .footer__address-wrapper {
-    display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
   }
   .footer-left-side {
     display: block;
@@ -355,6 +352,7 @@ body {
   .footer-wrapper {
     display: flex;
     align-items: baseline;
+    justify-content: space-between;
   }
   .footer-left-side {
     text-align: start;
@@ -364,6 +362,7 @@ body {
   }
   .footer__title {
     margin-bottom: 20px;
+    text-align: start;
   }
   .footer-subscription {
     margin-left: 0;
@@ -544,6 +543,11 @@ body {
     line-height: 1.222222;
     letter-spacing: 0.02em;
     color: #2196f3;
+  }
+}
+@media screen and (min-width: 320px) {
+  .mobile-menu__social-link {
+    font-size: 12px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -961,6 +965,14 @@ body {
     color: var(--button-bg-accent-color);
   }
 }
+@media screen and (min-width: 320px) {
+  .callback-form-check {
+    font-size: 7px;
+  }
+  .policy-link {
+    font-size: 7px;
+  }
+}
 @media screen and (min-width: 768px) {
   .callback-form-title {
     margin-bottom: 12px;
@@ -1257,6 +1269,12 @@ body {
     transition: transform var(--animation-duration) var(--animation-timing-function);
   }
 }
+@media screen and (min-width: 320px) {
+  .modal {
+    top: 20px;
+    transform: translateX(-50%);
+  }
+}
 @media screen and (min-width: 450px) {
   .modal {
     width: 450px;
@@ -1370,7 +1388,7 @@ body {
     margin: 0 auto;
     padding-top: 118px;
     padding-bottom: 118px;
-    background-size: 480px;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     max-width: 480px;
@@ -1685,6 +1703,9 @@ body {
     gap: 30px;
     flex-wrap: wrap;
     justify-content: center;
+  }
+  .clients__list-item {
+    flex-basis: calc((100% - 60px) / 3);
   }
   .clients__link {
     width: 226px;
