--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -184,6 +184,15 @@
   }
 }
 
+@media screen and(min-width:320px) {
+  .callback-form-check {
+    font-size: 7px;
+  }
+  .policy-link {
+    font-size: 7px;
+  }
+}
+
 @media screen and(min-width:768px) {
   .callback-form-title {
     margin-bottom: 12px;
