--- a/scss/components/_modal-window.scss
+++ b/scss/components/_modal-window.scss
@@ -22,6 +22,12 @@
       var(--animation-timing-function);
   }
 }
+@media screen and(min-width:320px) {
+  .modal {
+    top: 20px;
+    transform: translateX(-50%);
+  }
+}
 
 @media screen and (min-width: 450px) {
   .modal {
